2009-02-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* cpu.c, rtems/score/cpu.h: Eliminate _CPU_Thread_dispatch_pointer and
	passing address of _Thread_Dispatch to _CPU_Initialize. Clean up
	comments.

2008-10-28	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, preinstall.am, rtems/score/cpu.h: Now performs context
	switches and many tests run.
	* context_init.c, context_switch.S, cpu.c, cpu_asm.c: New files.

2008-10-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* .cvsignore, ChangeLog, Makefile.am, preinstall.am, rtems/asm.h,
	rtems/score/cpu.h, rtems/score/cpu_asm.h, rtems/score/m32r.h,
	rtems/score/types.h: New files.
